--- a/package.json
+++ b/package.json
@@ -9,11 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.5",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^5.16.9",
+    "@mui/material": "^6.1.9",
+    "@mui/x-date-pickers": "^7.23.0",
+    "@reduxjs/toolkit": "^2.4.0",
+    "ag-grid-community": "^32.3.3",
+    "ag-grid-react": "^32.3.3",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
+    "lodash-es": "^4.17.21",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-currency-format": "^1.1.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "simple-crypto-js": "^3.0.1"
+    "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.6",
+    "simple-crypto-js": "^3.0.1",
+    "simplebar-react": "^3.2.6"
   },
   "devDependencies": {
     "eslint": "^8",
